core_services/longhorn/templates/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  # tls:
  #   - hosts:
  #       - longhorn-mngmt.homelab.com
  rules:
    - host: longhorn-mgmt.homelab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
